done send mail activation account

--- a/src/common/integrations/mail/templates/account-activation.hbs
+++ b/src/common/integrations/mail/templates/account-activation.hbs
@@ -10,7 +10,7 @@
         <div
             style='font-family: Arial, sans-serif; max-width: 600px; margin: 0 auto;'
         >
-            <h2>Welcome to Our Website!</h2>
+            <h2>Hello {{name}}, Welcome to Our Website!</h2>
             <p>Thank you for creating an account. Please click the button below
                 to activate your account.</p>
 
@@ -23,9 +23,6 @@
             <p>If the button above doesn't work, you can also activate your
                 account by copying and pasting the following link into your
                 browser:</p>
-
-            <!-- Replace `activationLink` with the actual activation link you generate in your application -->
-            <p>{{activationLink}}</p>
 
             <p>If you did not sign up for an account, you can ignore this email.</p>
 
